--- a/index.html
+++ b/index.html
@@ -165,6 +165,67 @@
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Bayangan lebih kuat */
       letter-spacing: 1px; /* Spacing lebih lebar */
     }
+
+    .endpoint-list {
+        list-style: none;
+        padding: 0;
+    }
+
+    .endpoint-list li {
+        margin-bottom: 20px;
+        padding: 15px;
+        border: 1px solid rgba(0, 255, 159, 0.2);
+        border-radius: 8px;
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+
+    .endpoint-description {
+        font-size: 0.9rem;
+        color: #ccc;
+        margin-bottom: 10px;
+    }
+
+    .endpoint-url {
+        font-size: 1rem;
+        color: #00FF9F;
+        margin-bottom: 5px;
+    }
+
+    .param-input {
+        background-color: rgba(255, 255, 255, 0.05);
+        color: #fff;
+        border: 1px solid rgba(0, 255, 159, 0.2);
+        border-radius: 4px;
+        padding: 5px;
+        margin-right: 5px;
+        width: 200px; /* Lebar input */
+    }
+
+    .copy-url-button {
+        background-color: #FF4F00;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        padding: 5px 10px;
+        cursor: pointer;
+        font-size: 0.8rem;
+        transition: background-color 0.3s ease;
+    }
+
+    .copy-url-button:hover {
+        background-color: #fff;
+        color: #FF4F00;
+    }
+
+    .loading-indicator {
+        display: none;
+        margin-left: 10px;
+    }
+
+    .loading-indicator.active {
+        display: inline-block;
+    }
+
   </style>
 </head>
 
@@ -180,14 +241,14 @@
     <div class="row">
       <div class="col-md-4">
         <div class="container stat-box">
-          <h2 class="container-title">TOTAL REQUESTS</h2>
+          <h2 class="container-title">Total Requests</h2>
           <div id="total-requests" class="stat-value">Loading...</div>
         </div>
       </div>
 
       <div class="col-md-4">
         <div class="container stat-box">
-          <h2 class="container-title">TOTAL VISITORS</h2>
+          <h2 class="container-title">Total Visitors</h2>
           <div id="total-visitors" class="stat-value">Loading...</div>
           <div id="average-battery"></div>
         </div>
@@ -195,7 +256,7 @@
 
       <div class="col-md-4">
         <div id="api-key-container" class="container">
-          <h2 class="container-title">APIKEY</h2>
+          <h2 class="container-title">API Key</h2>
           <p id="api-key-display">Loading API Key...</p>
         </div>
       </div>
@@ -206,31 +267,64 @@
     <div class="row">
       <div class="col-md-12">
         <div class="container">
-          <h2 class="container-title">API ENDPOINTS</h2>
-          <ul>
-            <li>
-              <a href="#" data-endpoint="/api/stalk/github?user=wanzbrayy">
-                <i class="fab fa-github"></i> Get GitHub User (wanzbrayy)
-              </a>
-              <button class="try-it-button btn btn-primary" data-endpoint="/api/stalk/github?user=wanzbrayy">
-                <i class="fas fa-flask"></i> Try It
-              </button>
+          <h2 class="container-title">API Endpoints</h2>
+          <ul class="endpoint-list">
+             <li>
+                <div class="endpoint-description">
+                    Get GitHub User Information. Requires a username.
+                </div>
+                <div class="endpoint-url">
+                    <a href="#" data-endpoint="/api/stalk/github">
+                      <i class="fab fa-github"></i> /api/stalk/github
+                    </a>
+                </div>
+                <label for="github-user">Username:</label>
+                <input type="text" class="param-input" id="github-user" placeholder="Enter username" data-param="user">
+                <button class="try-it-button btn btn-primary" data-base-endpoint="/api/stalk/github">
+                    <i class="fas fa-flask"></i> Try It
+                    <span class="loading-indicator">Loading...</span>
+                </button>
+                <button class="copy-url-button" data-base-url="/api/stalk/github">
+                    <i class="fas fa-copy"></i> Copy URL
+                </button>
             </li>
             <li>
-              <a href="#" data-endpoint="/api/d/tiktok?url=https://www.tiktok.com/@scout2626/video/7359387817030466821">
-                <i class="fab fa-tiktok"></i> TikTok Downloader
-              </a>
-              <button class="try-it-button btn btn-primary" data-endpoint="/api/d/tiktok?url=https://www.tiktok.com/@scout2626/video/7359387817030466821">
-                <i class="fas fa-flask"></i> Try It
-              </button>
+                <div class="endpoint-description">
+                    Download TikTok video. Requires a TikTok video URL.
+                </div>
+                <div class="endpoint-url">
+                    <a href="#" data-endpoint="/api/d/tiktok">
+                      <i class="fab fa-tiktok"></i> /api/d/tiktok
+                    </a>
+                </div>
+                <label for="tiktok-url">TikTok URL:</label>
+                <input type="text" class="param-input" id="tiktok-url" placeholder="Enter TikTok URL" data-param="url">
+                <button class="try-it-button btn btn-primary" data-base-endpoint="/api/d/tiktok">
+                    <i class="fas fa-flask"></i> Try It
+                    <span class="loading-indicator">Loading...</span>
+                </button>
+                <button class="copy-url-button" data-base-url="/api/d/tiktok">
+                    <i class="fas fa-copy"></i> Copy URL
+                </button>
             </li>
             <li>
-              <a href="#" data-endpoint="/api/stalk/youtube?username=UCXuqSBlHAE6Xw-yeJA0Tunw">
-                <i class="fab fa-youtube"></i> Stalk YouTube
-              </a>
-              <button class="try-it-button btn btn-primary" data-endpoint="/api/stalk/youtube?username=UCXuqSBlHAE6Xw-yeJA0Tunw">
-                <i class="fas fa-flask"></i> Try It
-              </button>
+                <div class="endpoint-description">
+                    Stalk a YouTube channel. Requires a YouTube channel username.
+                </div>
+                <div class="endpoint-url">
+                    <a href="#" data-endpoint="/api/stalk/youtube">
+                        <i class="fab fa-youtube"></i> /api/stalk/youtube
+                    </a>
+                </div>
+                <label for="youtube-username">YouTube Username:</label>
+                <input type="text" class="param-input" id="youtube-username" placeholder="Enter YouTube username" data-param="username">
+                <button class="try-it-button btn btn-primary" data-base-endpoint="/api/stalk/youtube">
+                    <i class="fas fa-flask"></i> Try It
+                    <span class="loading-indicator">Loading...</span>
+                </button>
+                <button class="copy-url-button" data-base-url="/api/stalk/youtube">
+                    <i class="fas fa-copy"></i> Copy URL
+                </button>
             </li>
           </ul>
         </div>
@@ -285,21 +379,79 @@
 
       getApiKey();
 
-      tryItButtons.on('click', function(event) {
-        const endpoint = $(this).data('endpoint');
-        fetchApiResponse(endpoint);
-      });
-
-      async function fetchApiResponse(endpoint) {
-        try {
-          const response = await fetch(endpoint);
-          const data = await response.text(); // Ambil response sebagai text
-          apiResponseDiv.text(data); // Tampilkan sebagai text
-        } catch (error) {
-          apiResponseDiv.text(`Error: ${error}`);
+      // Function untuk membuat URL berdasarkan input dan base URL
+        function buildUrl(base, inputs) {
+            let url = base + '?';
+            let params = [];
+            for (const key in inputs) {
+                if (inputs[key]) {
+                    params.push(`${key}=${encodeURIComponent(inputs[key])}`);
+                }
+            }
+            url += params.join('&');
+            return url;
         }
-      }
 
+           // Event listener untuk tombol "Copy URL"
+        $('.copy-url-button').on('click', function(event) {
+            const baseUrl = $(this).data('base-url');
+            const listItem = $(this).closest('li');
+            const inputs = {};
+
+            listItem.find('.param-input').each(function() {
+                const param = $(this).data('param');
+                inputs[param] = $(this).val();
+            });
+
+            const url = buildUrl(baseUrl, inputs);
+
+            navigator.clipboard.writeText(url).then(() => {
+                alert('URL copied to clipboard!');
+            }).catch(err => {
+                console.error('Failed to copy URL: ', err);
+            });
+        });
+
+      tryItButtons.on('click', function(event) {
+          const baseEndpoint = $(this).data('base-endpoint');
+            const listItem = $(this).closest('li');
+            const inputs = {};
+
+            listItem.find('.param-input').each(function() {
+                const param = $(this).data('param');
+                inputs[param] = $(this).val();
+            });
+
+            const endpoint = buildUrl(baseEndpoint, inputs);
+
+            fetchApiResponse(endpoint);
+        });
+         // Umum: Fungsi untuk menampilkan/menyembunyikan loading indicator
+        function setLoading(button) {
+          const isLoading = true
+            const loadingIndicator = $(button).find('.loading-indicator');
+            if (isLoading) {
+                loadingIndicator.addClass('active');
+            } else {
+                loadingIndicator.removeClass('active');
+            }
+        }
+
+         // Modifikasi fungsi fetchApiResponse untuk menggunakan setLoading
+         async function fetchApiResponse(endpoint) {
+             const button = $(`[data-base-endpoint='${endpoint}']`);
+             setLoading(button, true); // Menampilkan loading indicator
+            try {
+                const response = await fetch(endpoint);
+                const data = await response.text(); // Ambil response sebagai text
+                apiResponseDiv.text(data); // Tampilkan sebagai text
+            } catch (error) {
+                apiResponseDiv.text(`Error: ${error}`);
+            } finally {
+                 setLoading(button, false);
+                //setLoading(tryItButtons, false); // Menyembunyikan loading indicator
+            }
+        }
        // Fungsi untuk mendapatkan data statistik secara real-time
        function updateStatistics() {
             $.ajax({
@@ -339,7 +491,7 @@
             $.ajax({
                 url: '/api/battery-level',
                 type: 'POST',
-                contentType: 'application/json',
+                contentType': 'application/json',
                 data: JSON.stringify({ batteryLevel: level }),
                 success: function(response) {
                     console.log('Battery level sent successfully:', response);
